Fix Railway deployment with static health check and startup delay - Add static health.html in public directory - Add 10-second startup delay for Railway health checks - Serve public directory first for immediate health check access - Improve Railway environment detection and logging

--- a/public/health.html
+++ b/public/health.html
@@ -8,6 +8,7 @@
     <h1 style="color: green;">✅ Healthy</h1>
     <p>Kindrid app is running successfully</p>
     <p>Timestamp: <span id="timestamp"></span></p>
+    <p>Status: Ready for Railway deployment</p>
     <script>
         document.getElementById('timestamp').textContent = new Date().toISOString();
     </script>
