Fix Railway deployment: remove startup delay and simplify health check - Remove startup delay that was blocking health checks - Simplify health.html to basic HTML - Add healthcheckInterval to Railway config - Ensure server responds immediately to health checks

--- a/public/health.html
+++ b/public/health.html
@@ -5,12 +5,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <h1 style="color: green;">✅ Healthy</h1>
-    <p>Kindrid app is running successfully</p>
-    <p>Timestamp: <span id="timestamp"></span></p>
-    <p>Status: Ready for Railway deployment</p>
-    <script>
-        document.getElementById('timestamp').textContent = new Date().toISOString();
-    </script>
+    <h1>Healthy</h1>
+    <p>OK</p>
 </body>
 </html>
